Allow account creation with phone or email
